fix calls to depricated methods